@startuml

title __FOLLOWPOSTS's Class Diagram__\n

  namespace com.architectica.socialcomponents {
    namespace main.followPosts {
      interface com.architectica.socialcomponents.main.followPosts.FollowPostsView {
          {abstract} + hideLocalProgress()
          {abstract} + onFollowingPostsLoaded()
          {abstract} + openPostDetailsActivity()
          {abstract} + openProfileActivity()
          {abstract} + showEmptyListMessage()
          {abstract} + showLocalProgress()
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.followPosts {
      class com.architectica.socialcomponents.main.followPosts.FollowingPostsActivity {
          - message_following_posts_empty : TextView
          - progressBar : ProgressBar
          - recyclerView : RecyclerView
          - swipeContainer : SwipeRefreshLayout
          + createPresenter()
          + hideLocalProgress()
          + onFollowingPostsLoaded()
          + openPostDetailsActivity()
          + openProfileActivity()
          + showEmptyListMessage()
          + showLocalProgress()
          # onActivityResult()
          # onCreate()
          - initContentView()
          - initPostListRecyclerView()
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.followPosts {
      class com.architectica.socialcomponents.main.followPosts.FollowingPostsPresenter {
          + loadFollowingPosts()
          + onAuthorClick()
          + onRefresh()
          ~ FollowingPostsPresenter()
          ~ onPostClicked()
      }
    }
  }
  

  com.architectica.socialcomponents.main.followPosts.FollowingPostsActivity .up.|> com.architectica.socialcomponents.main.followPosts.FollowPostsView
  com.architectica.socialcomponents.main.followPosts.FollowingPostsActivity -up-|> com.architectica.socialcomponents.main.base.BaseActivity
  com.architectica.socialcomponents.main.followPosts.FollowingPostsActivity o-- com.architectica.socialcomponents.adapters.FollowPostsAdapter : postsAdapter
  com.architectica.socialcomponents.main.followPosts.FollowingPostsPresenter -up-|> com.architectica.socialcomponents.main.base.BasePresenter
  com.architectica.socialcomponents.main.followPosts.FollowingPostsPresenter o-- com.architectica.socialcomponents.managers.PostManager : postManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
